research@grame.fr
====================================================
Copyright GRAME (c) 2009,2010,2011,2012
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR (ANR-08-CORD-010)
====================================================

----------------------------------------------------
Version 1.00
- new 'relative | absolute' synchronization mode
- a scene accepts multiple dropped files
- syntax changes in inscore script files
- fileWatcher methods renamed and simplified
- 'click' and 'select' messages are not supported any more.
- new 'stats' virutal node at application level (address /ITL/stats), supports 'get' and 'reset' messages
  the node gives statistics about the incoming messages [DOC TODO]
- crash bug in signal creation corrected: a signal size created with an incorrect stream 
  (e.g. a string value) was 0 and no buffer was allocated.
- OSC statistics support (count of received messages) at vnode /ITL/stats (supports 'get' and 'reset' messages)
- extension of the time related events to duration: new durEnter and durLeave watchable events.
- new 'absolutexy' message at scene level to switch to absolute coordinates (in pixels).
- new 'push' and 'pop' messages to store and restore current watched events and associated messages.
- internal change: mappings are now implemented as a separable library strictly complying to the 
  mappings formalism.
- new %f format for the date variable to request a float value (instead a rational value).
- interaction messages are not any more generated when the date can't be resolved.

----------------------------------------------------
Version 0.99
- new 'rate' message at application level to control the time task rate.
- new 'frameless' message for the scene.

----------------------------------------------------
Version 0.98
 - new 'fastgraph' object for graphic signals fast rendering
 - $date variable overflow catched